@@ -9132,7 +9132,7 @@ class DBProxy:
             sql+= "maxwdir,fairsharePolicy,minmemory,maxmemory,mintime,"
             sql+= "catchall,allowfax,wansourcelimit,wansinklimit,b.site_name,"
             sql+= "sitershare,cloudrshare,corepower,wnconnectivity,catchall,"
-            sql+= "c.role,maxrss,minrss,direct_access_lan,direct_access_wan "
+            sql+= "c.role,maxrss,minrss,direct_access_lan,direct_access_wan,tier "
             sql+= "FROM (ATLAS_PANDAMETA.schedconfig a "
             sql+= "LEFT JOIN ATLAS_PANDA.panda_site b ON a.siteid=b.panda_site_name) "
             sql+= "LEFT JOIN ATLAS_PANDA.site c ON b.site_name=c.site_name "
@@ -9162,7 +9162,7 @@ class DBProxy:
                        maxwdir,fairsharePolicy,minmemory,maxmemory,mintime, \
                        catchall,allowfax,wansourcelimit,wansinklimit,pandasite, \
                        sitershare,cloudrshare,corepower,wnconnectivity,catchall, \
-                       role,maxrss,minrss,direct_access_lan,direct_access_wan \
+                       role,maxrss,minrss,direct_access_lan,direct_access_wan,tier \
                        = resTmp
                     # skip invalid siteid
                     if siteid in [None,'']:
@@ -9197,6 +9197,7 @@ class DBProxy:
                     ret.corepower     = corepower
                     ret.catchall      = catchall
                     ret.role          = role
+                    ret.tier          = tier
                     ret.wnconnectivity = wnconnectivity
                     if ret.wnconnectivity == '':
                         ret.wnconnectivity = None
