@@ -1,5 +1,8 @@
 Release Notes
 
+* 9/15/2016
+  * added tier to SiteSpec
+
 * 9/12/2016
   * added multi zip support for ES
 
